--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,21 @@
+body > div{
+  overflow-x:hidden;
+}
+
+.card{
+  border-radius:0;
+  padding:2em;
+  margin:0em;
+}
+
 #visualizacao{
   background-color:black;
   color:white;
   width:100%;
   height:80vh;
   overflow-y:scroll;
-  overflow-x:wrap;
+  word-wrap:break-word;
+  padding:0.5em;
 }
 
 #codearea{
