--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,33 @@
+html {
+  font-size: 12px;
+}
+@media screen and (min-width: 320px) {
+  html {
+    font-size: calc(12px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+
 body > div{
   overflow-x:hidden;
 }
 
 #header{
   background-color:#303030;
+}
+
+#logo{
+  font-size:0.8em;
+}
+
+#logo-logo{
+  color:white;
+  font-size:1.2em;
 }
 
 .card{
@@ -25,6 +49,14 @@ body > div{
 
 #codearea{
   font-family:monospace;
+  font-weight:bold;
+  background-color:#002b36;
+  color:#b58900;
   width:100%;
   height:80vh;
+}
+
+#titles{
+  text-align:center;
+  font-family:monospace;
 }
