--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@ html {
   }
 }
 
+textarea{
+  border: 0px solid white;
+}
 
 body > div{
   overflow-x:hidden;
@@ -19,44 +22,60 @@ body > div{
 
 #header{
   background-color:#303030;
+  height:10vh;
 }
 
 #logo{
   font-size:0.8em;
 }
 
-#logo-logo{
+.logo-logo{
   color:white;
+  line-height: normal;
   font-size:1.2em;
 }
 
-.card{
-  border-radius:0;
-  padding:2em;
-  margin:0em;
-}
-
 #visualizacao{
-  background-color:black;
-  color:white;
+  background-color:#101010;
+  color:#fdf6e3;
   width:100%;
-  height:80vh;
+  height:78vh;
   overflow-y:scroll;
   word-wrap:break-word;
   padding:0.5em;
-  font-family:monospace;
+  font-family:'Roboto Mono',monospace;
 }
 
 #codearea{
-  font-family:monospace;
+  font-family:'Roboto Mono',monospace;
   font-weight:bold;
   background-color:#002b36;
   color:#b58900;
   width:100%;
-  height:80vh;
+  height:78vh;
 }
 
 #titles{
-  text-align:center;
-  font-family:monospace;
+  padding:1em;
+  font-family:'Roboto Mono',monospace;
+  height:10vh;
+}
+
+.row > div{
+  padding-left:0.5%;
+  padding-right:0.5%;
+}
+
+.btn {
+  background-color:#586e75;
+}
+
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
